--- a/style.css
+++ b/style.css
@@ -1,17 +1,31 @@
 .container.main {
     display: flex;
     align-items: center;
+    padding: 50px 0px 50px 0px;
+    /* border: 1px grey solid; */
+    border-top: 1px grey solid;
+    border-bottom: 1px grey solid;
+}
+
+.controllers {
+    display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .container.grid {
+    
     display: flex;
-    flex-direction: column;
+    /* min-width: 100px;
     max-width: 500px;
-    min-width: 500px;
-    max-height: 500px;
-    min-height: 500px;
-    border: 1px solid red;
+    width: 50%;
+    aspect-ratio: 1/1;
+    flex: 1 1 auto; */
+
+    flex-direction: column;
+    border: 1px solid rgb(86, 86, 86);
+    margin: 20px;
+
 }
 
 .row {
@@ -20,6 +34,54 @@
 
 .cell {
     outline: 0.5px solid black;
-    background-color: white;
-    
+    background-color: white;   
+}
+
+#select-grid-size {
+    margin: 0;
+}
+
+.grid-size {
+    margin-bottom: 5px;
+    margin-top: 5px;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+#pick-color {
+    margin-bottom: 5px;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+html {
+    background-color: rgba(243, 250, 255, 0.933);
+    font-family: 'Courier New', Courier, monospace;
+}
+
+.footer {
+    display: block;
+    margin-top: auto;
+    font-size: 14px;
+    bottom: 0;
+    justify-content: center;
+    padding-top: 50px;
+    margin-bottom: 15px;
+    align-self: center;
+    align-content: center;
+}
+
+a {
+    text-decoration: none;
+    color: rgb(0, 0, 0);
+}
+
+#gh-logo {
+    width: 35px;
+    height: 35px;
+    margin-bottom: -12px;
+    margin-left: 10px;
 }
