--- a/style.css
+++ b/style.css
@@ -55,11 +55,14 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 0;
+    padding: 0;
 }
 
 html {
     background-color: rgba(243, 250, 255, 0.933);
     font-family: 'Courier New', Courier, monospace;
+    height: 100%;
 }
 
 .footer {
